feat: common code jar